@startuml
'https://plantuml.com/class-diagram

package "com.br.bookhub" <<Frame>> {

class Book {
 - id: Long
 - name: String
 - publishedDate: LocalDate
 - totalPages: Integer
 -- tagged values --
 <b> @table.name:</b> book
 <b> @sequence.name:</b> sq_book
}

class Author {
 - id: Long
 - name: String
 -- tagged values --
 <b> @table.name:</b> author
 <b> @sequence.name:</b> sq_author
 <b> @rule.unique:</b> name
}

class Genre {
 - id: Long
 - name: String
}

class User {
 - id: Long
 - name: String
 - nickname: String
 - cpf: Integer
 - birthDate: LocalDate
 - email: String
 -- tagged values --
 <b> @table.name:</b> user
 <b> @sequence.name:</b> sq_user
 <b> @rule.unique:</b> cpf, email

}

class Read {
 - id: Long
 - startDate: LocalDateTime
 - endDate: LocalDateTime
 - pagesRead: Integer
 -- tagged values --
 <b> @table.name:</b> user
 <b> @sequence.name:</b> sq_user
 <b> @status.allowed:</b> PLANNING_READ | NOT_STARTED | READING |
  ON_HOLD | NOT_FINISH | FINISHED
}

class Review {
 - id: Long {id}
 - starRating: Integer
 - overview: String
 -- tagged values --
 <b> @table.name:</b> review
 <b> @sequence.name:</b> sq_review
}

Book "1...*"-->"1" Author
Book -u- Genre
Read "0...*"-R->"1" Book
Read "0...*"-->"1" User
Read "1"<-U-"0...*" Review

}
@enduml











